// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is desktopNext 1`] = `
.c0 {
  background-color: #ededed;
  border-radius: 0 5px 5px 0;
  border: none;
  color: #c0c0c0;
  height: 42px;
  outline: none;
  width: 48px;
}

<button
  className="c0"
  format="desktopNext"
>
  Button
</button>
`;

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is desktopPrevious 1`] = `
.c0 {
  background-color: #ededed;
  border-radius: 0 5px 5px 0;
  border: none;
  color: #c0c0c0;
  height: 42px;
  outline: none;
  width: 48px;
}

<button
  className="c0"
  format="desktopPrevious"
>
  Button
</button>
`;

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is desktopQuestion 1`] = `
.c0 {
  background-color: #ededed;
  border-radius: 0 5px 5px 0;
  border: none;
  color: #c0c0c0;
  height: 42px;
  outline: none;
  width: 48px;
}

<button
  className="c0"
  format="desktopQuestion"
>
  Button
</button>
`;

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is mobileNext 1`] = `
.c0 {
  background-color: #ededed;
  border-radius: 0 5px 5px 0;
  border: none;
  color: #c0c0c0;
  height: 42px;
  outline: none;
  width: 48px;
}

<button
  className="c0"
  format="mobileNext"
>
  Button
</button>
`;

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is mobilePrevious 1`] = `
.c0 {
  background-color: #ededed;
  border-radius: 0 5px 5px 0;
  border: none;
  color: #c0c0c0;
  height: 42px;
  outline: none;
  width: 48px;
}

<button
  className="c0"
  format="mobilePrevious"
>
  Button
</button>
`;

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is mobileQuestion 1`] = `
.c0 {
  background-color: #ededed;
  border-radius: 0 5px 5px 0;
  border: none;
  color: #c0c0c0;
  height: 42px;
  outline: none;
  width: 48px;
}

<button
  className="c0"
  format="mobileQuestion"
>
  Button
</button>
`;

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is tabletNext 1`] = `
.c0 {
  background-color: #ededed;
  border-radius: 0 5px 5px 0;
  border: none;
  color: #c0c0c0;
  height: 42px;
  outline: none;
  width: 48px;
}

<button
  className="c0"
  format="tabletNext"
>
  Button
</button>
`;

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is tabletPrevious 1`] = `
.c0 {
  background-color: #ededed;
  border-radius: 0 5px 5px 0;
  border: none;
  color: #c0c0c0;
  height: 42px;
  outline: none;
  width: 48px;
}

<button
  className="c0"
  format="tabletPrevious"
>
  Button
</button>
`;

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is tabletQuestion 1`] = `
.c0 {
  background-color: #ededed;
  border-radius: 0 5px 5px 0;
  border: none;
  color: #c0c0c0;
  height: 42px;
  outline: none;
  width: 48px;
}

<button
  className="c0"
  format="tabletQuestion"
>
  Button
</button>
`;
